# langchain

./: README.md  pyproject.toml
LangChain-Tutorial/: 01-basics-simple-LLM-app-LCEL.ipynb  01-client.py  01-serve.py  02-build-chatbot.ipynb  03-vector-stores-and-retrievers.ipynb
