[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["Rishil Ramesh <rishil.ramesh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.7"
langchain-community = "^0.2.7"
python-dotenv = "^1.0.1"
langserve = "^0.2.2"
fastapi = "^0.111.1"
sse-starlette = "^2.1.2"
transformers = "^4.42.4"
langchain-chroma = "^0.1.2"
tavily-python = "^0.3.4"
langchain-anthropic = "^0.1.20"
langgraph = "^0.1.8"
bs4 = "^0.0.2"
langchainhub = "^0.1.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
